1. feat: Strengthen immutable snapshots in InMemoryDataStore; 2. fix: completing test strategy